@@ -127,6 +127,7 @@ ldns_dnssec_zone_add_rr
 ldns_dnssec_zone_create_nsec3s
 ldns_dnssec_zone_create_nsecs
 ldns_dnssec_zone_create_rrsigs
+ldns_dnssec_zone_create_rrsigs_flg
 ldns_dnssec_zone_deep_free
 ldns_dnssec_zone_find_nsec3_original
 ldns_dnssec_zone_find_rrset
@@ -136,7 +137,9 @@ ldns_dnssec_zone_names_print
 ldns_dnssec_zone_new
 ldns_dnssec_zone_print
 ldns_dnssec_zone_sign
+ldns_dnssec_zone_sign_flg
 ldns_dnssec_zone_sign_nsec3
+ldns_dnssec_zone_sign_nsec3_flg
 ldns_edns_flags
 ldns_error_str
 ldns_fetch_valid_domain_keys
